InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetRevenueScheduleEntry__c/vlocity_ins__AssetRevenueScheduleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents calculated earned revenue from insurance premiums or other revenue sources. Entries are calculated per financial period for an insurance policy. Includes entries already earned as well as future earned revenue estimates. Master-detail child object of Policy (Asset).</description>
    <label>Revenue Schedule Entry</label>
    <nameField>
        <label>Entry Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>