InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetRevenueScheduleEntry__c/fields/vlocity_ins__Date__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>