InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetRevenueScheduleEntry__c/fields/vlocity_ins__SourceAssetTransactionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceAssetTransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Asset Transaction Id</label>
    <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
    <relationshipLabel>Revenue Schedule</relationshipLabel>
    <relationshipName>SourceAssetTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>