InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssetRevenueScheduleEntry__c/fields/vlocity_ins__TotalUnearnedRevenue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TotalUnearnedRevenue__c</fullName>
    <label>Total Unearned Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>